tests/bad/alias_to_nothing.mon
{
    value: *undefined_anchor, // Invalid: this anchor is not defined anywhere
}
